In progress - Server configurations

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-RUN apk update && apk add python3 &&  python3 --version && pip3 install cherrypy
+RUN apk update && apk add python3 &&  python3 --version && pip3 install --upgrade pip
 
 WORKDIR /usr
 
@@ -8,6 +8,8 @@ RUN mkdir server
 
 WORKDIR /usr/server
 
-COPY ./test.py .
+COPY . .
 
-CMD ["python3", "test.py"]
+RUN pip3 install -r requirements.txt
+
+CMD ["python3", "serverStart.py"]
